--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -428,6 +428,19 @@ ol.d {
     text-decoration: none;
     padding-top:10px;
 }
+#unread-msg{
+    background-color: rgba(230,13,13,0.8);
+    border-radius: 50%;
+    height:13px;
+    width: 13px;
+    color:white;
+    display: inline-block;
+    font-size: 8px;
+    vertical-align:12px;
+    margin-left: -7px;
+    padding:1px;
+    text-align: center;
+}
 .user-info>hr{
     margin-top:10px;
     margin-bottom:10px;
