unread-msg edit: hide number when 0 message in inbox

--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/userbox.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/userbox.xhtml
@@ -44,9 +44,9 @@
     </body>
     <script>
         function displayContent() {            
-//            if (contentId.innerHTML == "0") {
-                document.getElementById("unread-msg").style.disply = "none";
-//            }
+            if (document.getElementById("unread-msg").innerHTML == "0") {
+                document.getElementById("unread-msg").style.display = "none";
+            }
         }
         displayContent();
     </script>
