--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -223,7 +223,7 @@ ul.rights-menu li{
 .right-container{
     width:74%;
     float:right;
-    margin-top: 20px;
+    margin-top: 42px;
     margin-bottom: 50px;
     position:relative;
 }
@@ -303,12 +303,13 @@ body{
     -webkit-box-shadow: inset 0 0px 0 #ffffff;
     -moz-box-shadow: inset 0 0px 0 #ffffff;
     box-shadow: inset 0 0px 0 #ffffff;  
+    padding:5px 5px 7px 0px;
 }
 
 h2.system-welcome{  
 }
 .system-breadcrumb{
-    padding:5px;
+    padding:5px 5px 7px 0px;
 }
 .system-description{
     padding-top:30px;
